USART fix: speed, stop & IRQ

--- a/CubeVTX.ioc
+++ b/CubeVTX.ioc
@@ -51,6 +51,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA1.GPIOParameters=PinState,GPIO_Label
 PA1.GPIO_Label=LED_PWR1
 PA1.Locked=true
@@ -210,8 +211,9 @@ SPI1.FirstBit=SPI_FIRSTBIT_LSB
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize,FirstBit
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-USART1.BaudRate=115200
-USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART1.BaudRate=4800
+USART1.IPParameters=VirtualMode-Asynchronous,BaudRate,StopBits
+USART1.StopBits=STOPBITS_2
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
