--- a/CubeVTX.ioc
+++ b/CubeVTX.ioc
@@ -9,10 +9,9 @@ Mcu.CPN=STM32F051K6U6
 Mcu.Family=STM32F0
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SPI1
-Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP2=SYS
+Mcu.IP3=USART1
+Mcu.IPNb=4
 Mcu.Name=STM32F051K6Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PA1
@@ -116,8 +115,10 @@ PA9.GPIO_Label=LED_FR3
 PA9.Locked=true
 PA9.PinState=GPIO_PIN_SET
 PA9.Signal=GPIO_Output
-PB0.GPIOParameters=PinState,GPIO_Label
+PB0.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB0.GPIO_Label=LED_FR2
+PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB0.GPIO_PuPd=GPIO_NOPULL
 PB0.Locked=true
 PB0.PinState=GPIO_PIN_SET
 PB0.Signal=GPIO_Output
@@ -131,17 +132,19 @@ PB2.GPIO_Label=LED_FR1
 PB2.Locked=true
 PB2.PinState=GPIO_PIN_SET
 PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=CS2_SPICLK
 PB3.Locked=true
-PB3.Mode=Simplex_Bidirectional_Master
-PB3.Signal=SPI1_SCK
+PB3.Signal=GPIO_Output
 PB4.GPIOParameters=PinState,GPIO_Label
-PB4.GPIO_Label=SC_SPI1
+PB4.GPIO_Label=CS1_SPILE
 PB4.Locked=true
 PB4.PinState=GPIO_PIN_SET
 PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=CS0_SPIDATA
 PB5.Locked=true
-PB5.Mode=Simplex_Bidirectional_Master
-PB5.Signal=SPI1_MOSI
+PB5.Signal=GPIO_Output
 PB6.Locked=true
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
@@ -184,7 +187,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-LL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_USART1_UART_Init-USART1-false-LL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -203,14 +206,6 @@ RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI1.CalculateBaudRate=6.0 MBits/s
-SPI1.DataSize=SPI_DATASIZE_5BIT
-SPI1.Direction=SPI_DIRECTION_1LINE
-SPI1.FirstBit=SPI_FIRSTBIT_LSB
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize,FirstBit
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
 USART1.BaudRate=4800
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate,StopBits
 USART1.StopBits=STOPBITS_2
