--- a/CubeVTX.ioc
+++ b/CubeVTX.ioc
@@ -11,7 +11,8 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=USART1
-Mcu.IPNb=4
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F051K6Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PA1
@@ -20,17 +21,16 @@ Mcu.Pin10=PA9
 Mcu.Pin11=PA10
 Mcu.Pin12=PA11
 Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PA15
-Mcu.Pin17=PB3
-Mcu.Pin18=PB4
-Mcu.Pin19=PB5
+Mcu.Pin14=PA14
+Mcu.Pin15=PA15
+Mcu.Pin16=PB3
+Mcu.Pin17=PB4
+Mcu.Pin18=PB5
+Mcu.Pin19=PB6
 Mcu.Pin2=PA3
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=PB8
-Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin20=PB7
+Mcu.Pin21=PB8
+Mcu.Pin22=VP_SYS_VS_Systick
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
@@ -38,7 +38,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PB2
-Mcu.PinsNb=24
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F051K6Ux
@@ -71,10 +71,11 @@ PA12.GPIO_Label=LED_FR6
 PA12.Locked=true
 PA12.PinState=GPIO_PIN_SET
 PA12.Signal=GPIO_Output
-PA13.Mode=Serial_Wire
-PA13.Signal=SYS_SWDIO
-PA14.Mode=Serial_Wire
-PA14.Signal=SYS_SWCLK
+PA14.GPIOParameters=GPIO_ModeDefaultOD
+PA14.GPIO_ModeDefaultOD=GPIO_MODE_AF_PP
+PA14.Locked=true
+PA14.Mode=Half_duplex(single_wire_mode)
+PA14.Signal=USART2_TX
 PA15.GPIOParameters=PinState,GPIO_Label
 PA15.GPIO_Label=LED_FR7
 PA15.Locked=true
@@ -145,9 +146,15 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=CS0_SPIDATA
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
+PB6.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
+PB6.GPIO_PuPd=GPIO_PULLUP
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB6.Locked=true
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
+PB7.GPIOParameters=GPIO_PuPd
+PB7.GPIO_PuPd=GPIO_NOPULL
 PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
@@ -187,7 +194,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_USART1_UART_Init-USART1-false-LL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_USART1_UART_Init-USART1-false-LL-true,4-MX_USART2_UART_Init-USART2-false-LL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -207,9 +214,19 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 USART1.BaudRate=4800
-USART1.IPParameters=VirtualMode-Asynchronous,BaudRate,StopBits
+USART1.DMADisableonRxErrorParam=ADVFEATURE_DMA_ENABLEONRXERROR
+USART1.IPParameters=VirtualMode-Asynchronous,BaudRate,StopBits,RxPinLevelInvertParam,SwapParam,OverrunDisableParam,DMADisableonRxErrorParam
+USART1.OverrunDisableParam=ADVFEATURE_OVERRUN_ENABLE
+USART1.RxPinLevelInvertParam=ADVFEATURE_RXINV_ENABLE
 USART1.StopBits=STOPBITS_2
+USART1.SwapParam=ADVFEATURE_SWAP_DISABLE
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART2.BaudRate=4800
+USART2.IPParameters=VirtualMode-Half_duplex(single_wire_mode),BaudRate,StopBits,Mode,SwapParam
+USART2.Mode=MODE_TX
+USART2.StopBits=STOPBITS_2
+USART2.SwapParam=ADVFEATURE_SWAP_DISABLE
+USART2.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
