--- a/CubeVTX.ioc
+++ b/CubeVTX.ioc
@@ -71,8 +71,9 @@ PA12.GPIO_Label=LED_FR6
 PA12.Locked=true
 PA12.PinState=GPIO_PIN_SET
 PA12.Signal=GPIO_Output
-PA14.GPIOParameters=GPIO_ModeDefaultOD
+PA14.GPIOParameters=GPIO_PuPdOD,GPIO_ModeDefaultOD
 PA14.GPIO_ModeDefaultOD=GPIO_MODE_AF_PP
+PA14.GPIO_PuPdOD=GPIO_NOPULL
 PA14.Locked=true
 PA14.Mode=Half_duplex(single_wire_mode)
 PA14.Signal=USART2_TX
@@ -146,18 +147,19 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=CS0_SPIDATA
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PB6.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
+PB6.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPdOD,GPIO_PuPd,GPIO_ModeDefaultOD
+PB6.GPIO_ModeDefaultOD=GPIO_MODE_AF_PP
 PB6.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
 PB6.GPIO_PuPd=GPIO_PULLUP
+PB6.GPIO_PuPdOD=GPIO_PULLUP
 PB6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB6.Locked=true
-PB6.Mode=Asynchronous
+PB6.Mode=Half_duplex(single_wire_mode)
 PB6.Signal=USART1_TX
-PB7.GPIOParameters=GPIO_PuPd
-PB7.GPIO_PuPd=GPIO_NOPULL
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=RX_ACTIVITY
 PB7.Locked=true
-PB7.Mode=Asynchronous
-PB7.Signal=USART1_RX
+PB7.Signal=GPIO_Input
 PB8.GPIOParameters=PinState,GPIO_Label
 PB8.GPIO_Label=LED_PWR0
 PB8.Locked=true
@@ -213,18 +215,18 @@ RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
-USART1.BaudRate=4800
+USART1.BaudRate=9600
 USART1.DMADisableonRxErrorParam=ADVFEATURE_DMA_ENABLEONRXERROR
-USART1.IPParameters=VirtualMode-Asynchronous,BaudRate,StopBits,RxPinLevelInvertParam,SwapParam,OverrunDisableParam,DMADisableonRxErrorParam
+USART1.IPParameters=BaudRate,StopBits,RxPinLevelInvertParam,SwapParam,OverrunDisableParam,DMADisableonRxErrorParam,VirtualMode-Half_duplex(single_wire_mode)
 USART1.OverrunDisableParam=ADVFEATURE_OVERRUN_ENABLE
-USART1.RxPinLevelInvertParam=ADVFEATURE_RXINV_ENABLE
-USART1.StopBits=STOPBITS_2
+USART1.RxPinLevelInvertParam=ADVFEATURE_RXINV_DISABLE
+USART1.StopBits=STOPBITS_1
 USART1.SwapParam=ADVFEATURE_SWAP_DISABLE
-USART1.VirtualMode-Asynchronous=VM_ASYNC
-USART2.BaudRate=4800
+USART1.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
+USART2.BaudRate=9600
 USART2.IPParameters=VirtualMode-Half_duplex(single_wire_mode),BaudRate,StopBits,Mode,SwapParam
 USART2.Mode=MODE_TX
-USART2.StopBits=STOPBITS_2
+USART2.StopBits=STOPBITS_1
 USART2.SwapParam=ADVFEATURE_SWAP_DISABLE
 USART2.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
