--- a/CubeVTX.ioc
+++ b/CubeVTX.ioc
@@ -10,35 +10,38 @@ Mcu.Family=STM32F0
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART1
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP3=TIM2
+Mcu.IP4=USART1
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F051K6Ux
 Mcu.Package=UFQFPN32
-Mcu.Pin0=PA1
-Mcu.Pin1=PA2
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA14
-Mcu.Pin15=PA15
-Mcu.Pin16=PB3
-Mcu.Pin17=PB4
-Mcu.Pin18=PB5
-Mcu.Pin19=PB6
-Mcu.Pin2=PA3
-Mcu.Pin20=PB7
-Mcu.Pin21=PB8
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin3=PA4
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PB2
-Mcu.PinsNb=23
+Mcu.Pin0=PA0
+Mcu.Pin1=PA1
+Mcu.Pin10=PB2
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA14
+Mcu.Pin16=PA15
+Mcu.Pin17=PB3
+Mcu.Pin18=PB4
+Mcu.Pin19=PB5
+Mcu.Pin2=PA2
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=PB8
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F051K6Ux
@@ -51,6 +54,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+PA0.Signal=S_TIM2_CH1_ETR
 PA1.GPIOParameters=PinState,GPIO_Label
 PA1.GPIO_Label=LED_PWR1
 PA1.Locked=true
@@ -215,6 +219,12 @@ RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Period,AutoReloadPreload
+TIM2.Period=0x3ff
 USART1.BaudRate=9600
 USART1.DMADisableonRxErrorParam=ADVFEATURE_DMA_ENABLEONRXERROR
 USART1.IPParameters=BaudRate,StopBits,RxPinLevelInvertParam,SwapParam,OverrunDisableParam,DMADisableonRxErrorParam,VirtualMode-Half_duplex(single_wire_mode)
@@ -231,4 +241,6 @@ USART2.SwapParam=ADVFEATURE_SWAP_DISABLE
 USART2.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
